# lionherd

./: pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  test_hardening.yml
.github/workflows/: ci.yml
src/lionherd/adapters/: __init__.py
src/lionherd/adapters/log_adapters/: __init__.py  persistence.py
src/lionherd/capabilities/: __init__.py  base.py
src/lionherd/services/: __init__.py
src/lionherd/services/mcps/: __init__.py  loader.py  wrapper.py
src/lionherd/services/providers/: __init__.py  anthropic_messages.py  oai_compatible.py  openai_chat.py
src/lionherd/services/types/: __init__.py  backend.py  endpoint.py  hook.py  imodel.py  log.py  registry.py  tool.py
src/lionherd/services/utilities/: __init__.py  header_factory.py  rate_limiter.py  resilience.py  token_calculator.py
tests/capabilities/: test_capabilities.py
tests/services/: __init__.py  coverage_report.txt  coverage_report_endpoint.txt  test_backend_coverage.py  test_endpoint_coverage.py  test_header_factory.py  test_header_factory_coverage.py  test_hook_coverage.py  test_imodel_coverage.py  test_log_coverage.py  test_rate_limiter_coverage.py  test_registry_coverage.py  test_resilience.py  test_resilience_retry.py  test_token_calculator.py  test_tool_coverage.py
tests/services/mcps/: conftest.py  test_loader.py  test_loader_integration.py  test_wrapper.py
tests/services/providers/: test_anthropic_messages.py  test_oai_compatible.py  test_openai_chat.py
tests/services/test_utilities/: test_header_factory.py  test_pr2_regressions.py  test_rate_limiter.py  test_resilience.py  test_resilience_retry.py  test_token_calculator.py
tests/services/types/: test_backend_coverage.py  test_endpoint.py  test_hook.py  test_hook_coverage.py  test_imodel.py  test_log.py  test_registry.py  test_tool.py
