[project]
name = "lionherd"
version = "1.0.0-alpha"
description = "Core utilities, base classes, and protocols for lionherd ecosystem"
requires-python = ">=3.11"
dependencies = ["lionherd-core>=1.0.0a0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lionherd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: Unit tests",
  "property: Property-based tests",
  "slow: Slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::RuntimeWarning"]

[dependency-groups]
dev = ["pre-commit>=4.3.0", "pytest>=8.4.2", "ruff>=0.14.3"]
