[project]
name = "lionherd"
version = "1.0.0-alpha"
description = "Core utilities, base classes, and protocols for lionherd ecosystem"
requires-python = ">=3.11"
dependencies = [
  "lionherd-core>=1.0.0a2",
  "httpx>=0.28.1",
  "tiktoken>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lionherd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: Unit tests",
  "property: Property-based tests",
  "slow: Slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::RuntimeWarning"]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.14.3",
]
