[project]
name = "lionherd"
version = "1.0.0-alpha"
description = "Core utilities, base classes, and protocols for lionherd ecosystem"
requires-python = ">=3.11"
dependencies = [
  "lionherd-core @ git+https://github.com/khive-ai/lionherd-core.git",
  "httpx>=0.27.0",
  "tiktoken>=0.8.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.13.0"]
schema-gen = ["lionherd-core[schema-gen]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lionherd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: Unit tests",
  "property: Property-based tests",
  "slow: Slow tests (deselect with '-m \"not slow\"')",
  "integration: Integration tests requiring external services (MCP servers, APIs)",
]
filterwarnings = ["ignore::RuntimeWarning"]

[tool.coverage.run]
omit = [
  "src/lionherd/services/providers/*",
  "src/lionherd/services/third_party/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.14.3",
]
